--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
       .emptyMessage {
         font-weight: bold;
-        color: red;
+        color: blue;
         font-size: 1.2em;
       }
       li {
